test/parser/wildcard/wildcard_field_error.myte
module test

fun main() {
  A.B._;
}